--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,5 +17,12 @@
       Nollaa
     </button>
   </form>
+  <div>Aseta arvo:</div>
+  <form action="/set" method="POST">
+    <input type="text" name="value">
+    <button type="submit">
+      Aseta
+    </button>
+  </form>
 </body>
 </html>
